<resources>
    <string name="app_name">Epi Android</string>
    <string name="loginLoginScreen">Login</string>
    <string name="loginButtonLoginScreen">Log in</string>
    <string name="dummyTextLoginScreen">Intranet Password</string>
    <string name="WrongLogin">Wrong login and/or password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logo">logo</string>
    <string name="photo">photo</string>
    <string name="Home">Home</string>
    <string name="Alertes">Alerts</string>
    <string name="Notes">Marks</string>
    <string name="Planning">Planning</string>
    <string name="Projects">Projects</string>
    <string name="Modules">Modules</string>
    <string name="Disconnection">Disconnect</string>
    <string name="dummyTestText">10</string>
    <string name="notes">Marks</string>
    <string name="modules">Modules</string>

    <string name="validate">See planning</string>
    <string name="logfieldinfo">Active Log:</string>
    <string name="messages">Messages</string>
    <string name="beginon">beginning:  </string>
    <string name="endon">ending:       </string>
    <string name="room">room:</string>
    <string name="students">students:</string>
    <string name="mod">B5 - TEST</string>
    <string name="salle">Salle caverne de la mort du bois touffu</string>
    <string name="rooom">room:</string>
    <string name="acti">Reunion des syndicats de lOuest</string>
    <string name="log">login:</string>
    <string name="realLogin">doceul_l</string>
    <string name="subscribe">Subscribe</string>
    <string name="token">Token</string>
    <string name="roomLabel">room:</string>
    <string name="projects">Projects</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="sendToken">Send Token</string>
</resources>
