<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_alertes"
            android:icon="@drawable/alerte"
            android:title="@string/Alertes" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/grade"
            android:title="@string/Notes" />
        <item
            android:id="@+id/nav_planning"
            android:icon="@drawable/planning"
            android:title="@string/Planning" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/message"
            android:title="@string/Messages" />
        <item
            android:id="@+id/nav_modules"
            android:icon="@drawable/module"
            android:title="@string/Modules" />
        <item
            android:id="@+id/nav_disco"
            android:icon="@drawable/disco"
            android:title="@string/Disconnection" />
    </group>

</menu>
