<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="#c0f1ff">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titlemodule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="@string/dummyTestText"/>

            <TextView
                android:id="@+id/actititle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="@string/dummyTestText"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/typetitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/dummyTestText"
            android:layout_marginLeft="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginon"
                android:id="@+id/textView4"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                tools:text="@string/dummyTestText"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endon"
                android:id="@+id/textView5"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="@string/dummyTestText"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/roomType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        tools:text="@string/dummyTestText"
        android:textStyle="bold"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/totalStudentsRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        tools:text="@string/dummyTestText"
        android:layout_gravity="right"
        android:layout_below="@+id/roomType"
        android:layout_alignLeft="@+id/roomType"
        android:layout_alignStart="@+id/roomType" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room"
        android:id="@+id/textView6"
        android:layout_toLeftOf="@+id/totalStudentsRegistered"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/students"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/totalStudentsRegistered"
        android:layout_toLeftOf="@+id/totalStudentsRegistered"
        android:layout_toStartOf="@+id/totalStudentsRegistered" />

</RelativeLayout>